--- a/conv-autoencoder-digits.ipynb
+++ b/conv-autoencoder-digits.ipynb
@@ -389,63 +389,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading Autoencoder for all digits from directory C:\\Users\\a642196\\coding\\CNN-auto-encoder\\ckpts\\all-conv-ae.hdf5...\n",
-      "WARNING:tensorflow:From C:\\Users\\a642196\\.conda\\envs\\tf_env\\lib\\site-packages\\tensorflow\\python\\framework\\op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Colocations handled automatically by placer.\n",
-      "WARNING:tensorflow:From C:\\Users\\a642196\\.conda\\envs\\tf_env\\lib\\site-packages\\tensorflow\\python\\ops\\math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.cast instead.\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "input_6 (InputLayer)         (None, 28, 28, 1)         0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_19 (Conv2D)           (None, 28, 28, 16)        160       \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_7 (MaxPooling2 (None, 14, 14, 16)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_20 (Conv2D)           (None, 14, 14, 8)         1160      \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_8 (MaxPooling2 (None, 7, 7, 8)           0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_21 (Conv2D)           (None, 7, 7, 8)           584       \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_9 (MaxPooling2 (None, 4, 4, 8)           0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_22 (Conv2D)           (None, 4, 4, 6)           438       \n",
-      "_________________________________________________________________\n",
-      "encoder (MaxPooling2D)       (None, 2, 2, 6)           0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_23 (Conv2D)           (None, 2, 2, 6)           330       \n",
-      "_________________________________________________________________\n",
-      "up_sampling2d_9 (UpSampling2 (None, 4, 4, 6)           0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_24 (Conv2D)           (None, 4, 4, 8)           440       \n",
-      "_________________________________________________________________\n",
-      "up_sampling2d_10 (UpSampling (None, 8, 8, 8)           0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_25 (Conv2D)           (None, 8, 8, 8)           584       \n",
-      "_________________________________________________________________\n",
-      "up_sampling2d_11 (UpSampling (None, 16, 16, 8)         0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_26 (Conv2D)           (None, 14, 14, 16)        1168      \n",
-      "_________________________________________________________________\n",
-      "up_sampling2d_12 (UpSampling (None, 28, 28, 16)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_27 (Conv2D)           (None, 28, 28, 1)         145       \n",
-      "=================================================================\n",
-      "Total params: 5,009\n",
-      "Trainable params: 5,009\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-652d13bb0048>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mckpt_loc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mCUR_DIR\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"ckpts\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"all-conv-ae.hdf5\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misfile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mckpt_loc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Loading Autoencoder for all digits from directory %s...\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mckpt_loc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mall_ae\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_model\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mckpt_loc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'os' is not defined"
      ]
     }
    ],
