--- a/conv-autoencoder-fashion.ipynb
+++ b/conv-autoencoder-fashion.ipynb
@@ -307,9 +307,11 @@
     "    # this is our input placeholder\n",
     "    input_img = Input(shape=INPUT_SHAPE)\n",
     "    # layer between input and middle layer\n",
-    "    encode = Conv2D(16, DEFAULT_KERNEL, activation=\"relu\", padding=\"same\")(input_img)\n",
+    "    encode = Conv2D(64, DEFAULT_KERNEL, activation=\"relu\", padding=\"same\")(input_img)\n",
     "    encode = MaxPooling2D(DEFAULT_POOL_SIZE, padding=\"same\")(encode)\n",
-    "    encode = Conv2D(8, DEFAULT_KERNEL, activation=\"relu\", padding=\"same\")(encode)\n",
+    "    encode = Conv2D(32, DEFAULT_KERNEL, activation=\"relu\", padding=\"same\")(encode)\n",
+    "    encode = MaxPooling2D(DEFAULT_POOL_SIZE, padding=\"same\")(encode)\n",
+    "    encode = Conv2D(16, DEFAULT_KERNEL, activation=\"relu\", padding=\"same\")(encode)\n",
     "    encode = MaxPooling2D(DEFAULT_POOL_SIZE, padding=\"same\")(encode)\n",
     "    encode = Conv2D(8, DEFAULT_KERNEL, activation=\"relu\", padding=\"same\")(encode)\n",
     "    # encode = MaxPooling2D(DEFAULT_POOL_SIZE, padding=\"same\")(encode)\n",
@@ -323,9 +325,11 @@
     "    # decode = UpSampling2D(DEFAULT_POOL_SIZE)(decode)\n",
     "    decode = Conv2D(8, DEFAULT_KERNEL, activation=\"relu\", padding=\"same\")(encoded)\n",
     "    decode = UpSampling2D(DEFAULT_POOL_SIZE)(decode)\n",
-    "    decode = Conv2D(8, DEFAULT_KERNEL, activation=\"relu\", padding=\"same\")(decode)\n",
+    "    decode = Conv2D(16, DEFAULT_KERNEL, activation=\"relu\", padding=\"same\")(decode)\n",
     "    decode = UpSampling2D(DEFAULT_POOL_SIZE)(decode)\n",
-    "    decode = Conv2D(16, DEFAULT_KERNEL, activation=\"relu\")(decode)\n",
+    "    decode = Conv2D(32, DEFAULT_KERNEL, activation=\"relu\", padding=\"same\")(decode)\n",
+    "    decode = UpSampling2D(DEFAULT_POOL_SIZE)(decode)\n",
+    "    decode = Conv2D(64, DEFAULT_KERNEL, activation=\"relu\")(decode)\n",
     "    decode = UpSampling2D(DEFAULT_POOL_SIZE)(decode)\n",
     "    decoded = Conv2D(1, DEFAULT_KERNEL, activation=\"sigmoid\", padding=\"same\")(decode)\n",
     "\n",
