Fixes fashion log dir

--- a/conv-autoencoder-fashion.ipynb
+++ b/conv-autoencoder-fashion.ipynb
@@ -1367,7 +1367,7 @@
     "        monitor=\"val_loss\", factor=0.3, patience=3, verbose=1, mode=\"min\"\n",
     "    )\n",
     "    tb = TensorBoard(\n",
-    "        log_dir=\"./logs7all-fashion\", histogram_freq=0, write_graph=True, write_images=True, update_freq=\"batch\"\n",
+    "        log_dir=\"./logs/all-fashion\", histogram_freq=0, write_graph=True, write_images=True, update_freq=\"batch\"\n",
     "    )\n",
     "    all_ae.fit(\n",
     "        X_train,\n",
@@ -1629,7 +1629,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reconstructed \"7\" (aka anomaly) with auto encoder"
+    "## Reconstructed \"pullover\" (aka anomaly) with auto encoder"
    ]
   },
   {
