Finishing specific data sets since a generic anomaly detector is coming

--- a/conv_autoencoder_digits.ipynb
+++ b/conv_autoencoder_digits.ipynb
@@ -1238,7 +1238,6 @@
     "anomaly_losses = np.array([])\n",
     "# for img in digit_data[7][0]:\n",
     "\n",
-    "\n",
     "sevens = digit_data[7][0]\n",
     "imgs = sevens.reshape(-1, 28, 28, 1)\n",
     "rec_imgs = one_ae.predict(imgs)\n",
@@ -1555,7 +1554,9 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
