Finishs generifying anomaly detector notebook

--- a/conv_autoencoder_digits.ipynb
+++ b/conv_autoencoder_digits.ipynb
@@ -34,7 +34,7 @@
     "    ReduceLROnPlateau,\n",
     "    TensorBoard,\n",
     ")\n",
-    "from keras.datasets import mnist, fashion_mnist, cifar10, cifar100\n",
+    "from keras.datasets import mnist, fashion_mgnist, cifar10, cifar100\n",
     "from keras.layers import (\n",
     "    Conv2D,\n",
     "    Dense,\n",
